Small fix in Italian translation

--- a/it/kicad.po
+++ b/it/kicad.po
@@ -72,8 +72,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: KiCad\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-09-06 18:20+0200\n"
-"PO-Revision-Date: 2017-09-06 18:22+0200\n"
+"POT-Creation-Date: 2017-09-08 23:51+0200\n"
+"PO-Revision-Date: 2017-09-08 23:50+0200\n"
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
@@ -743,7 +743,8 @@ msgid ""
 "\n"
 "Do you want to continue?"
 msgstr ""
-"La cartella selezionata non è vuota. Si raccomanda la creazione di nuovi progetti in una cartella dedicata e vuota.\n"
+"La cartella selezionata non è vuota. Si raccomanda la creazione di nuovi "
+"progetti in una cartella dedicata e vuota.\n"
 "\n"
 "Continuare?"
 
@@ -6030,7 +6031,7 @@ msgstr "Mostra l'elenco dei collegamenti con nomi e id"
 
 #: pcbnew/menubar_pcbframe.cpp:550
 msgid "&Flip Board View"
-msgstr "Ri&flette vista scheda"
+msgstr "Ri&fletti vista scheda"
 
 #: pcbnew/menubar_pcbframe.cpp:551
 msgid "Flip (mirror) the board view"
