--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -41,6 +41,7 @@ Mateusz Skowroński <skowri[at]gmail-dot-com>
 Cheng Sheng <chengsheng[at]google-dot-com> Google Inc.
 Kristoffer Ödmark <kristoffer.odmark90[at]gmail-dot-com>
 Oliver Walters <oliver.henry.walters[at]gmail-dot-com>
+Jon Evans <jon[at]craftyjon-dot-com>
 
 See also CHANGELOG.txt for contributors.
 
